--- a/pub/index.html
+++ b/pub/index.html
@@ -11,6 +11,51 @@
   </head>
   <body>
     <div id="cont"></div>
+    <script type="text/javascript">
+      var DATA = [{
+        id: 1,
+        title: 'первый',
+        place: 'афиша',
+        status: 'active',
+        shows: 2134
+      }, {
+        id: 2,
+        title: 'пир на весь мир',
+        place: 'рамблер',
+        status: 'finish',
+        shows: 213233134
+      }, {
+        id: 3,
+        title: 'персона',
+        place: 'афиша',
+        status: 'active',
+        shows: 11102134
+      }, {
+        id: 4,
+        title: 'первоочередный',
+        place: 'рамблер',
+        status: 'planing',
+        shows: 999920
+      }, {
+        id: 5,
+        title: 'перевозка',
+        place: 'рамблер',
+        status: 'finish',
+        shows: 666
+      }, {
+        id: 6,
+        title: 'закрыто',
+        place: 'афиша',
+        status: 'finish',
+        shows: 777
+      }, {
+        id: 7,
+        title: 'перестало быть крутым',
+        place: 'рамблер',
+        status: 'finish',
+        shows: 6696
+      }];
+    </script>
     <script type="text/babel" src="js/app.js"></script>
   </body>
 </html>
