--- a/pub/index.html
+++ b/pub/index.html
@@ -55,6 +55,69 @@
         status: 'finish',
         shows: 6696
       }];
+
+      var DATA1 = [{
+        id: 8,
+        title: 'треш',
+        place: 'афиша',
+        status: 'active',
+        shows: 2134
+      }, {
+        id: 9,
+        title: 'джс рефакторинг',
+        place: 'рамблер',
+        status: 'finish',
+        shows: 213233134
+      }, {
+        id: 3,
+        title: 'как личность',
+        place: 'афиша',
+        status: 'active',
+        shows: 11102134
+      }, {
+        id: 4,
+        title: 'столешница',
+        place: 'рамблер',
+        status: 'planing',
+        shows: 999920
+      }, {
+        id: 5,
+        title: 'редкость',
+        place: 'рамблер',
+        status: 'finish',
+        shows: 666
+      }, {
+        id: 6,
+        title: 'хлебом не корми',
+        place: 'афиша',
+        status: 'finish',
+        shows: 777
+      }, {
+        id: 7,
+        title: 'адепт ебанутых программистов',
+        place: 'рамблер',
+        status: 'finish',
+        shows: 6696
+      }];
+    </script>
+    <script type="text/javascript">
+      var DATA_by_campaign = {
+        campaigns: [
+          {
+            campaign: {
+              title: 'Первая кампания',
+              ctr: '0.2'
+            },
+            flights: DATA
+          },{
+            campaign: {
+              title: 'ВТОРАНЯ КАИАНЯ',
+              ctr: '0.5'
+            },
+            flights: DATA1
+          }
+        ]
+      }
     </script>
     <script type="text/babel" src="js/app.js"></script>
   </body>
