fix multiple pagination

--- a/pub/index.html
+++ b/pub/index.html
@@ -101,7 +101,7 @@
       }];
     </script>
     <script type="text/javascript">
-      var DATA_by_campaign = {
+      var DATA2 = {
         campaigns: [
           {
             campaign: {
